---
source: src/tests.rs
expression: ast
input_file: src/examples/valid/dataframe.ra
---
Main(([], [], [
    Assignment(false, Id(dataframe), ReadCSV(String(song_data_clean.csv))),
    Assignment(false, Id(col), String(danceability)),
    Write([UnaryDataframeOp(Average, dataframe, String(song_duration_ms))]),
    Write([UnaryDataframeOp(Std, dataframe, Id(col))]),
    Write([UnaryDataframeOp(Mode, dataframe, Id(col))]),
    Write([UnaryDataframeOp(Variance, dataframe, Id(col))]),
    Write([Correlation(dataframe, Id(col), String(song_duration_ms))]),
]))
